# data-centre

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  LICENSE  README.md  environment.yml  makefile  pyproject.toml  todo.taskpaper
.github/workflows/: linkcheck.yml  release.yml  sphinx.yml  test.yml
docs/: .skip.linkcheck  changelog.md  conf.py  developer.md  index.md  links.md  maintainer.md  presentation.md  user.md
docs/developer/: grid-storage-system.md  htcondor-glossary.md  tips.md
docs/developer/grid-storage-system/: 1-voms-clients.md  2-gfal.md  4-xrootdfs.md  5-xrootd.md
docs/developer/tips/: htcondor-classad.md  monitor.md  tail.md
docs/maintainer/: computing-resources.md  documenting.md  installing.md  releasing.md
docs/presentation/: 2023-dc-intro.md  2023-dc-intro.vtt
docs/user/: logging-in.md  onboarding.md  pipeline.md  quick-start.md  systems.md
docs/user/pipeline/: 1-classad.md  10-classad.md  11-classad-interactive.md  12-classad-vanilla.md  13-classad-parallel.md  14-classad-transfer-files.md  2-software-deployment.md  3-MPI-applications.md  4-IO.md  4-Input.md  5-Output.md  5-interactive.md
docs/user/pipeline/1-classad/: 1-classad-interactive.md  2-classad-vanilla.md  3-classad-parallel.md  4-classad-transfer-files.md
docs/user/pipeline/1-classad/2-classad-vanilla/: example.ini
docs/user/pipeline/1-classad/3-classad-parallel/: example.ini  makefile
docs/user/pipeline/1-classad/4-classad-transfer-files/: makefile  repl.ini  repl.sh
docs/user/pipeline/1-classad/4-classad-transfer-files-2/: cat.ini  makefile
docs/user/pipeline/11-classad-interactive/: example.ini  makefile
docs/user/pipeline/12-classad-vanilla/: makefile
docs/user/pipeline/13-classad-parallel/: example.ini
docs/user/pipeline/2-software-deployment/: 1-tarball.md  2-CVMFS.md  3-Continuous-Deployment.md  3-pip-install-user.md
docs/user/pipeline/2-software-deployment/1-tarball/: makefile  tarball.ini  tarball.sh
docs/user/pipeline/2-software-deployment/2-CVMFS/: cvmfs.ini  cvmfs.out  cvmfs.sh  makefile
docs/user/pipeline/2-software-deployment/3-pip-install-user/: makefile  pip-install-user.ini  pip-install-user.sh
docs/user/pipeline/3-MPI-applications/: 0-Vanilla-MPI.md  1-OpenMPI.md  2-OpenMPI-CVMFS.md  3-OpenMPI-CVMFS-AVX512.md
docs/user/pipeline/3-MPI-applications/0-Vanilla-MPI/: makefile  mpi.ini  mpi.sh
docs/user/pipeline/3-MPI-applications/1-OpenMPI/: env.sh  mpi.ini  mpi.sh
docs/user/pipeline/3-MPI-applications/2-OpenMPI-CVMFS/: env.sh  mpi.ini
docs/user/pipeline/3-MPI-applications/3-OpenMPI-CVMFS-AVX512/: env.sh  makefile  mpi.ini
docs/user/pipeline/4-IO/: 0-transfer-via-ClassAd.md  1-grid-storage-system-2.md  1-grid-storage-system.md  1-storage-elements.md  2-librarian.md
docs/user/pipeline/4-IO/1-grid-storage-system/: 1-voms-clients.md  2-gfal.md  3-accessing-grid-storage-using-HTCondor.md  4-xrootdfs.md  5-xrootd.md
docs/user/pipeline/4-IO/1-grid-storage-system-2/: gfal.sh  makefile
docs/user/pipeline/4-IO/1-grid-storage-system/3-accessing-grid-storage-using-HTCondor/: gfal.ini  gfal.sh
docs/user/pipeline/4-Input/: 1-librarian.md  2-storage-elements.md
docs/user/pipeline/5-Output/: 0-transfer-output-files.md  1-storage-elements.md
docs/user/pipeline/5-interactive/: 1-classad-interactive.md
docs/user/pipeline/5-interactive/1-classad-interactive/: example.ini
docs/user/presentation/: data_centre_intro_presentation.vtt
docs/user/systems/: 0-Nodes.md  1-CVMFS.md  2-CephFS.md
examples/arch_info/: README.markdown  arch_info.sh  arch_info.template  arch_info_analysis.py  check_arch_info_done.py  gen_arch_info_classad.py  makefile
src/souk/: htcondor_helper.py
src/souk/system/: arch_info.py
src/souk/util/cli/: arg_string.py  ini_formatter.py
tests/system/: test_arch_info.py
