[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "souk"
version = "0.3.0"
description = "SO:UK Data Centre documentation."
license = "BSD-3-Clause"
keywords = [
    "SO:UK",
    "data centre",
    "HPC",
    "HTC",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Text Processing :: Filters",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
]
homepage = "https://github.com/simonsobs-uk/data-centre"
repository = "https://github.com/simonsobs-uk/data-centre"
documentation = "https://simonsobs-uk.github.io/data-centre"
authors = ["Kolen Cheung <christian.kolen@gmail.com>"]
readme = "docs/index.md"
packages = [
    { include = "souk", from = "src" },
]
include = [
    'LICENSE',
    'docs/index.md',
]

[tool.poetry.dependencies]
python = ">=3.7"

# extras
coloredlogs = {optional = true, version = "*"}
bump-my-version = {optional = true, version = "*"}

# tests
coverage = { optional = true, version = "*" }
pytest = {optional = true, version = "*"}

# docs: sync this with tox.testenv.docs below
sphinx = {optional = true, version = "*"}
myst-parser = {optional = true, version = "*"}
furo = {optional = true, version = "*"}
sphinxcontrib-apidoc = {optional = true, version = "*"}
sphinx-autobuild = {optional = true, version = "*"}
linkify-it-py = {optional = true, version = "*"}
sphinx-last-updated-by-git = {optional = true, version = "*"}

[tool.poetry.extras]
extras = [
    "coloredlogs",
    "bump-my-version",
]
tests = [
    "coverage",
    "pytest",
]
docs = [
    "sphinx",
    "myst-parser",
    "furo",
    "sphinxcontrib-apidoc",
    "sphinx-autobuild",
    "linkify-it-py",
    "sphinx-last-updated-by-git",
]

# [tool.poetry.scripts]

[tool.coverage.paths]
source = [
    'src',
    '*/site-packages',
]

[tool.coverage.run]
branch = true
source = [
    'src',
    'tests',
]
relative_files = true

[tool.coverage.report]
show_missing = true
precision = 2

[tool.pytest.ini_options]

python_files = [
    'test_*.py',
    '*_test.py',
    'tests.py',
]

addopts = [
    '-ra',
    '--strict-markers',
    '--doctest-modules',
    '--doctest-glob=\*.rst',
    '--tb=short',
]

testpaths = [
    'tests',
]

[tool.isort]
line_length = 120
known_first_party = 'souk'
default_section = 'THIRDPARTY'
forced_separate = 'test_souk_data_centre'
skip = [
    '.tox',
    '.eggs',
    'ci/templates',
    'build',
    'dist',
]

[tool.bumpversion]
current_version = "0.3.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "docs/conf.py"
search = 'release = "{current_version}"'
replace = 'release = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/souk/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "docs/maintainer/releasing.md"
search = 'v{current_version}...main'
replace = 'v{new_version}...main'
